# testsmith

./: .deepsource.toml  .env.example  .flake8  .gitignore  README.md  hatch.toml  ip_protection_rules.json.example  main.py  pyproject.toml  test_package_install.py  test_package_install.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: codeql-analysis.yml  main.yml  release.yml
docs/: ADDING_NEW_LANGUAGE_SUPPORT.md  AI_PROVIDERS.md  ARCHITECTURE.md  CONTRIBUTING.md  IP_PROTECTION.md  SOURCEGRAPH_INTEGRATION.md  STRUCTURED_LOGGING_GUIDELINES.md  TODO.md  TODO_v2_claude.md  cli.mdx  configuration.mdx  faqs.mdx  installation.mdx  overview.mdx  quickstart.mdx  running.mdx
examples/: README.md  call_graph_demo.py  complexity_analysis_demo.py  coverage.json  demonstrate_test_naming.py  display_structure.sh  enhanced_qa_workflow_demo.py  improved_test_coverage_analysis.py  test_naming_conventions.md
qa_agent/: __init__.py  agents.py  call_graph_analyzer.py  cli.py  config.py  console_agents.py  console_reader.py  copilot_adapter.py  coverage_analyzer.py  error_recovery.py  error_recovery.py.bak  git_history_analyzer.py  ip_protector.py  models.py  parallel_workflow.py  parser.py  repo_navigator.py  sourcegraph_client.py  task_queue.py  test_generator.py  test_validator.py  workflows.py
qa_agent/prompts/: unit_test_rules.md
qa_agent/utils/: __init__.py  file.py  formatting.py  logging.py
tests/: cleanup_example_tests.py  codecov.yml  conftest.py  pytest.ini
tests/e2e/: README.md  conftest.py  debug_workflow_test.py  test_e2e_basic.py  test_e2e_cli.py  test_e2e_component_integration.py  test_e2e_error_recovery.py  test_e2e_error_recovery.py.bak  test_e2e_external_services.py.bak  test_e2e_ip_protection.py  test_e2e_parallel_workflow.py  test_e2e_real_project.py  test_e2e_repo_navigation.py  test_e2e_workflow.py
tests/unit/: test_circuit_breaker_thread_safety.py  test_cli.py  test_cognitive_complexity.py  test_config.py  test_console_reader.py  test_coverage_analyzer.py  test_error_handling_methods.py  test_error_recovery.py  test_ip_protector.py  (+15 more)
(+15 files in other folders)
